2003-12-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reformat.
	* clock/Makefile.am: Reformat.
	* mongoosev/Makefile.am: Reformat. Use dirstamps for preinstallation.
	* tx39/Makefile.am: Ditto.
	* shared/cache/Makefile.am: Ditto.
	* mongoosev/duart/Makefile.am: Ditto.
	* mongoosev/vectorisrs/Makefile.am: Reformat.
	* r46xx/vectorisrs/Makefile.am: Reformat.
	* shared/Makefile.am: Reformat.
	* shared/interrupts/Makefile.am: Reformat.
	* timer/Makefile.am: Reformat.
	* tx39/vectorisrs/Makefile.am: Reformat.

2003-10-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* mongoosev/Makefile.am: Rework preinstall rules.
	* mongoosev/duart/Makefile.am: Rework preinstall rules.
	* tx39/include/Makefile.am: Remove.
	* tx39/Makefile.am: Merge-in tx39/include/Makefile.am.
	* configure.ac: Remove tx39/include/Makefile.

2003-10-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CANONICAL_HOST.

2003-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CHECK_CPU.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* clock/ckinit.c, mongoosev/duart/mg5uart.c, mongoosev/duart/mg5uart.h,
	mongoosev/duart/mg5uart_reg.c, mongoosev/include/mongoose-v.h,
	mongoosev/vectorisrs/maxvectors.c, mongoosev/vectorisrs/vectorisrs.c,
	r46xx/vectorisrs/maxvectors.c, shared/interrupts/isr_entries.S,
	timer/timer.c, tx39/vectorisrs/maxvectors.c: URL for license changed.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* clock/Makefile.am: Reflect having moved automake/.
	* mongoosev/Makefile.am: Reflect having moved automake/.
	* mongoosev/duart/Makefile.am: Reflect having moved automake/.
	* mongoosev/vectorisrs/Makefile.am: Reflect having moved automake/.
	* r46xx/Makefile.am: Reflect having moved automake/.
	* r46xx/vectorisrs/Makefile.am: Reflect having moved automake/.