@@ -23,7 +23,7 @@ include $(top_srcdir)/../../../automake/lib.am
 $(PGM): $(clock_rel_OBJECTS)
 	$(make-rel)
 
-all-local: $(ARCH) $(clock_rel_OBJECTS) $(PGM)
+all-local: $(clock_rel_OBJECTS) $(PGM)
 
 .PRECIOUS: $(PGM)
 
