@@ -21,7 +21,7 @@ include $(top_srcdir)/../../../automake/lib.am
 $(PGM): $(timer_rel_OBJECTS)
 	$(make-rel)
 
-all-local: $(ARCH) $(timer_rel_OBJECTS) $(PGM)
+all-local: $(timer_rel_OBJECTS) $(PGM)
 
 .PRECIOUS: $(PGM)
 
